--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -1,1 +1,123 @@
-<h1>hello fdfgchv</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>cfgvhbjnm</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/app.css">
+</head>
+<body class="px-10">
+    <nav class="container mx-auto flex items-center justify-between py-4">
+        <div>
+            <img src="/img/logo.png" alt="logo">
+        </div>
+        <div>
+            <ul class="flex items-center ">
+                <li class="ml-6"><a href="#">Offers</a></li>
+                <li class="ml-6"><a href="#">Menu</a></li>
+                <li class="ml-6"><a href="#">Register</a></li>
+                <li class="ml-6"><a href="#">Login</a></li>
+                <li class="ml-6"><a href="#" class="inline-block px-4 py-2 rounded-full"><img src="/img/cart.png" alt=""></a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="hero py-16">
+        <div class="container mx-auto flex items-center justify-between">
+            <div class="w-1/2">
+               <h6 class="text-lg"><em>R U HUNGRY</em></h6>
+               <h1 class="text-5xl font-bold">Get some pizza</h1>
+            </div>
+            <div class="w-1/2">
+                <img src="/img/hero-pizza.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="menu container mx-auto py-8">
+        <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
+        <div class="grid grid-cols-6 col-gap-20 row-gap-16">
+            <div class="w-64">
+                <img class="h-40 mb-4 mx-auto " src="/img/pizza.png" alt="">
+                <div class="text-center">
+                    <h2 class="mb-4 text-lg">Marghrita</h2>
+                    <div class="flex items-center justify-around mt-6">
+                        <span class="font-bold text-lg">$34</span>
+                        <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
+                            <span>+</span>
+                            <span class="ml-4">Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="abc  w-64">
+                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <div class="text-center">
+                    <h2 class="mb-4 text-lg">Marghrita</h2>
+                    <div class="flex items-center justify-around mt-6">
+                        <span class="font-bold text-lg">$34</span>
+                        <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
+                            <span>+</span>
+                            <span class="ml-4">Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="w-64">
+                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <div class="text-center">
+                    <h2 class="mb-4 text-lg">Marghrita</h2>
+                    <div class="flex items-center justify-around mt-6">
+                        <span class="font-bold text-lg">$34</span>
+                        <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
+                            <span>+</span>
+                            <span class="ml-4">Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="abc w-64">
+                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <div class="text-center">
+                    <h2 class="mb-4 text-lg">Marghrita</h2>
+                    <div class="flex items-center justify-around mt-6">
+                        <span class="font-bold text-lg">$34</span>
+                        <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
+                            <span>+</span>
+                            <span class="ml-4">Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="w-64">
+                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <div class="text-center">
+                    <h2 class="mb-4 text-lg">Marghrita</h2>
+                    <div class="flex items-center justify-around mt-6">
+                        <span class="font-bold text-lg">$34</span>
+                        <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
+                            <span>+</span>
+                            <span class="ml-4">Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="abc w-64">
+                <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
+                <div class="text-center">
+                    <h2 class=" text-lg">Marghrita</h2>
+                    <div class="flex items-center justify-around mt-6">
+                        <span class="font-bold text-lg">$34</span>
+                        <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
+                            <span>+</span>
+                            <span class="ml-1">Add</span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="/js/app.js"></script>
+</body>
+</html>
