--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -12,84 +12,24 @@
 </section>
 <section class="menu container mx-auto py-8">
     <h1 class="text-xl font-bold mb-8">All Pizzas</h1>
-    <div class="grid grid-cols-6 col-gap-20 row-gap-16">
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto " src="/img/pizza.png" alt="">
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Marghrita</h2>
-                <div class="flex items-center justify-around mt-6">
-                    <span class="font-bold text-lg">$34</span>
-                    <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
-                        <span>+</span>
-                        <span class="ml-4">Add</span>
-                    </button>
+    <div class="grid grid-cols-5 col-gap-20 row-gap-17">
+        <% pizzas.forEach(function(pizza) { %> 
+            <div class="abc w-64">
+                <img class="h-40 mb-4 mx-auto" src="/img/<%= pizza.image%>" alt="">
+                <div class="text-center">
+                    <h2 class=" text-lg"><%= pizza.Pizza_name %></h2>
+                    <h4>Ratings:<%= pizza.ratings %></h4>
+                    <div class="flex items-center justify-around mt-6">
+                        <span class="font-bold text-lg">₹<%= pizza.cost %></span>
+                        <button  data-pizza="<%= JSON.stringify(pizza) %>" class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
+                            <span>+</span>
+                            <span class="ml-1">Add</span>
+                        </button>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="abc  w-64">
-            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Marghrita</h2>
-                <div class="flex items-center justify-around mt-6">
-                    <span class="font-bold text-lg">$34</span>
-                    <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
-                        <span>+</span>
-                        <span class="ml-4">Add</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Marghrita</h2>
-                <div class="flex items-center justify-around mt-6">
-                    <span class="font-bold text-lg">$34</span>
-                    <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
-                        <span>+</span>
-                        <span class="ml-4">Add</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="abc w-64">
-            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Marghrita</h2>
-                <div class="flex items-center justify-around mt-6">
-                    <span class="font-bold text-lg">$34</span>
-                    <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
-                        <span>+</span>
-                        <span class="ml-4">Add</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="w-64">
-            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-            <div class="text-center">
-                <h2 class="mb-4 text-lg">Marghrita</h2>
-                <div class="flex items-center justify-around mt-6">
-                    <span class="font-bold text-lg">$34</span>
-                    <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
-                        <span>+</span>
-                        <span class="ml-4">Add</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        <div class="abc w-64">
-            <img class="h-40 mb-4 mx-auto" src="/img/pizza.png" alt="">
-            <div class="text-center">
-                <h2 class=" text-lg">Marghrita</h2>
-                <div class="flex items-center justify-around mt-6">
-                    <span class="font-bold text-lg">$34</span>
-                    <button class="add-to-cart px-6 py-1 rounded-full items-center font-bold">
-                        <span>+</span>
-                        <span class="ml-1">Add</span>
-                    </button>
-                </div>
-            </div>
-        </div>
+        <% }) %>    
+        
+        <script src="../js/app.js"></script>
     </div>
 </section>
