--- a/resources/views/admin/orders.ejs
+++ b/resources/views/admin/orders.ejs
@@ -5,6 +5,7 @@
             <thead>
                 <tr>
                     <th class="px-4 py-2 text-left">Orders</th>
+                    <th class="px-4 py-2 text-left">Branch</th>
                     <th class="px-4 py-2 text-left">Customer</th>
                     <th class="px-4 py-2 text-left">Address</th>
                     <th class="px-4 py-2 text-left">status</th>
