--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -28,12 +28,10 @@
             <div>
                 <form action="/orders" method="POST" class="mt-12" id="branch">
                     <div class="relative w-1/2 ml-auto mb-4">
-                        <select id="Branch" name="Branch" class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline">
-                          <option value="vvm">VV Mohalla - branch</option>
-                          <option value="cm">Chamaraja Mohalla - branch</option>
-                          <option value="in">Indira Nagar - branch</option>
-                          <option value="nn">Netaji Nagar - branch</option>
-                          <option value="kn">Kuvempunagar - branch</option>
+                        <select name="Branch" id="Branch" name="Branch" class="block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded leading-tight focus:outline-none focus:shadow-outline">
+                        <% Branch.forEach(function(Branch) { %> 
+                          <option value="<%= Branch.branch_name %>"><%= Branch.branch_name %> -Branch</option>
+                        <% }) %>   
                         </select>
                         <div class="pointer-events-none absolute inset-y-0 right-0 flex items-center px-2 text-gray-700">
                           <svg class="fill-current h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"/></svg>
