--- a/resources/views/customers/orders.ejs
+++ b/resources/views/customers/orders.ejs
@@ -15,6 +15,7 @@
             <thead>
                 <tr>
                     <th class="px-4 py-2 text-left">Orders</th>
+                    <th class="px-4 py-2 text-left">Branch</th>
                     <th class="px-4 py-2 text-left">Phone</th>
                     <th class="px-4 py-2 text-left">Address</th>
                     <th class="px-4 py-2 text-left">Time</th>
@@ -28,6 +29,9 @@
                         <a class="link" href="/customer/orders/<%= order._id %>"><%= order._id %></a>
                     </td>
                     <td class="border px-4 py-2">
+                        <%= order.Branch %>
+                    </td>
+                    <td class="border px-4 py-2">
                         <%= order.phone %>
                     </td>
                     <td class="border px-4 py-2">
@@ -36,6 +40,7 @@
                     <td class="border px-4 py-2">
                         <%= moment(order.createdAt).format('hh:mm A') %>
                     </td>
+                    
                 </tr>
                 <% }) %>
                 <% } else { %>
